fix(gradle-plugin): open jdk.internal.access for Robolectric on JDK 25+ (#1335)